# csgo-demo-parser

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE.valve.md  README.md  build.rs
.github/workflows/: tag_release.yml
src/: cursor.rs  data_tables.rs  demo.rs  frame.rs  main.rs  message.rs  packet.rs  string_tables.rs
src/protos/: engine_gcmessages.rs  mod.rs
