[package]
name = "csgo-demo-parser"
version = "0.1.0"
edition = "2021"

[features]
no_std = [] # TODO..

[dependencies]
bitflags = "1"
anyhow = "1"
bytes = "1"
bitbuffer = "0.10"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[build-dependencies]
anyhow = "1"
prost-build = "0.11"
walkdir = "2"
