[package]
name = "csgo-demo-parser"
version = "0.1.0"
edition = "2021"
description = "A Counter-Strike: Global Offensive .dem parser"

[features]
no_std = [] # TODO..

[dependencies]
clap = { version = "4", features = ["derive"] }
bitflags = "1"
anyhow = "1"
bytes = "1"
bitbuffer = "0.10"
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[build-dependencies]
anyhow = "1"
prost-build = "0.11"
walkdir = "2"
